Add icons&compinfo (#1102)
* add icons, premium request

* add componentinfo

* add icons

* add componentinfo

* small fix

* add pwa icon #1101

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,73 @@
 
 nib:
   - au.com.nib/au.com.nib.features.splash.ui.SplashScreenActivity
+
+exerprise_workout_meal_planner:
+  - com.anabolicaliens.exerprise/com.anabolicaliens.exerprise.SplashActivity
+
+little_caesars:
+  - com.littlecaesars/com.littlecaesars.startup.StartUpActivity
+
+pimsleur:
+  - com.simonandschuster.pimsleur.unified.android/com.pimsleur.MainActivity
+
+plane_finder:
+  - com.pinkfroot.planefinderfree/com.pinkfroot.planefinder.ui.MainActivity
+
+vesync:
+  - com.etekcity.vesyncplatform/com.etekcity.vesyncplatform.presentation.ui.activities.LaunchActivity
+
+wonder_fridge:
+  - com.meolly.fridge/com.meolly.fridge.ui.screen.MainActivity
+
+woot:
+  - com.woot.android.main/com.woot.android.main.MainActivity
+
+discover_mobile:
+  - com.discoverfinancial.mobile/h520d1760.wa2d536d8.e4f350aef.l62f02911
+  - com.discoverfinancial.mobile/g1cdff8d2.i718b9092.s636e8aa1.lec0a894c
+
+dutch_bros:
+  - com.dutchbros.loyalty/com.dutchbros.loyalty.dutch_bros_forge.MainActivity
+
+ciyue:
+  - org.eu.mumulhl.ciyue/org.eu.mumulhl.ciyue.MainActivity
+
+eidetic:
+  - io.github.hathibelagal.eidetic/io.github.hathibelagal.eidetic.MainActivity
+
+fintunes:
+  - nl.moeilijkedingen.jellyfinaudioplayer/nl.moeilijkedingen.jellyfinaudioplayer.MainActivity
+
+habit_maker:
+  - com.dessalines.habitmaker/com.dessalines.habitmaker.MainActivity
+
+keysh:
+  - io.github.hufrea.keysh/io.github.hufrea.keysh.ActivityMain
+
+nfcgate:
+  - de.tu_darmstadt.seemoo.nfcgate/de.tu_darmstadt.seemoo.nfcgate.gui.MainActivity
+
+open_alert_viewer:
+  - studio.okcode.open_alert_viewer/studio.okcode.open_alert_viewer.MainActivity
+
+rivo:
+  - com.grinch.rivo/com.grinch.rivo.MainActivity
+
+sound_remote:
+  - io.github.soundremote/io.github.soundremote.MainActivity
+
+sherpa_tts:
+  - org.woheller69.ttsengine/com.k2fsa.sherpa.onnx.tts.engine.MainActivity
+
+mi_movistar:
+  - com.telefonica.movistar/com.telefonica.movistar.SplashScreen
+
+credit_karma:
+  - com.creditkarma.mobile.international/com.creditkarma.mobile.international.landing.ui.LandingActivity
+
+linked__in:
+  - com.linkedin.android/com.linkedin.android.authenticator.NYEFestivalActivityAlias
+
+airtel:
+  - com.tsdc.selfcare/com.tsdc.selfcare.MainActivity
