Add 4 app icons
- au Pay
- JRE Bank
- JRE Point
- Tidy Drive

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -85,3 +85,15 @@ linked__in:
 
 airtel:
   - com.tsdc.selfcare/com.tsdc.selfcare.MainActivity
+
+au_pay:
+  - jp.auone.wallet/jp.auone.wallet.activity.AppStartActivity
+
+jre_bank:
+  - jp.co.rakuten_bank.sapp_jre/jp.co.rakuten_bank.sapp_jre.ui.UI0001
+
+jre_point:
+  - jp.co.jreast.jrepoint/jp.co.jreast.jrepoint.controller.boot.StartActivity
+
+tidy_drive:
+  - com.falhongcha.tidy_drive/com.falhongcha.tidy_drive.MainActivity
