--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -97,3 +97,6 @@ jre_point:
 
 tidy_drive:
   - com.falhongcha.tidy_drive/com.falhongcha.tidy_drive.MainActivity
+
+santa_alc:
+  - co.riiid.vida/co.riiid.vida.MainActivity
