--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -100,3 +100,51 @@ tidy_drive:
 
 santa_alc:
   - co.riiid.vida/co.riiid.vida.MainActivity
+
+cashea:
+  - com.cashea.app/com.cashea.app.MainActivity
+
+core:
+  - com.avaxwallet/com.avaxwallet.MainActivity
+
+gbcc:
+  - com.philj56.gbcc/com.philj56.gbcc.MainActivity
+
+google_voice_access:
+  - com.google.android.apps.accessibility.voiceaccess/com.google.android.apps.accessibility.voiceaccess.activities.LaunchActivity
+
+gumroad:
+  - com.gumroad.app/com.gumroad.app.ui.screens.onboarding.OnboardingActivity
+
+hermes_paket:
+  - de.myhermes.app/de.myhermes.app.MainActivity
+
+iliad:
+  - it.iliad/it.iliad.presentation.MainActivity
+
+market_monk:
+  - com.codesail.market_monk/com.codesail.market_monk.MainActivity
+
+mealient:
+  - gq.kirmanak.mealient/gq.kirmanak.mealient.ui.activity.MainActivity
+
+mercusys:
+  - com.mercusys.halo/com.tplink.mercusys.component.account.welcome.view.WelcomeActivity
+
+moto_widget:
+  - com.motorola.timeweatherwidget/com.motorola.commandcenter.MainActivity
+
+pikatorrent:
+  - com.pikatorrent.PikaTorrent/com.pikatorrent.PikaTorrent.MainActivity
+
+pixverse:
+  - com.pixverseai.pixverse/com.pixverseai.pixverse.MainActivity
+
+quicktiles:
+  - com.asdoi.quicktiles/com.asdoi.quicksettings.SettingsActivity
+
+raccoon_for_friendica:
+  - com.livefast.eattrash.raccoonforfriendica/com.livefast.eattrash.raccoonforfriendica.MainActivity
+
+zalando_prive:
+  - de.zalando.prive/de.zalando.lounge.ui.splash.SplashActivity
