--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -148,3 +148,45 @@ raccoon_for_friendica:
 
 zalando_prive:
   - de.zalando.prive/de.zalando.lounge.ui.splash.SplashActivity
+
+musicbrainz:
+  - org.metabrainz.android/org.metabrainz.android.ui.screens.dashboard.DashboardActivity
+
+mt_manager:
+  - bin.mt.plus/bin.mt.plus.MainDarkIcon
+
+slither_io:
+  - air.com.hypah.io.slither/air.com.hypah.io.slither.AIRAppEntry
+
+gta_iii:
+  - com.rockstar.gta3/com.fiveplay.mod.RMS.Recovery
+
+calculator:
+  - com.darkempire78.opencalculator/com.darkempire78.opencalculator.activities.MainActivity
+
+telegram:
+  - org.telegram.messenger.beta/org.telegram.messenger.DefaultIcon
+
+wifi_widget:
+  - com.w2sv.wifiwidget/com.w2sv.wifiwidget.MainActivity
+
+molly:
+  - im.molly.app/org.thoughtcrime.securesms.RoutingActivityAltChat
+
+right_messages:
+  - com.goodwy.smsmessenger/com.goodwy.smsmessenger.activities.SplashActivity.Original
+
+microsoft_365:
+  - com.microsoft.office.officehub/com.microsoft.office.officesuite.OfficeSuiteActivity
+
+samsung_good_lock:
+  - com.samsung.android.goodlock/com.samsung.android.goodlock.MainActivity
+
+right_dialer:
+  - com.goodwy.dialer/com.goodwy.dialer.activities.SplashActivity.Original
+
+venmo:
+  - com.venmo/com.venmo.android.platform.AppExperienceLauncherActivity
+
+bbc_iplayer:
+  - bbc.iplayer.android/uk.co.bbc.iplayer.startup.legacy.routing.LegacyRoutingActivity
