--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -100,3 +100,93 @@ tidy_drive:
 
 santa_alc:
   - co.riiid.vida/co.riiid.vida.MainActivity
+
+cashea:
+  - com.cashea.app/com.cashea.app.MainActivity
+
+core:
+  - com.avaxwallet/com.avaxwallet.MainActivity
+
+gbcc:
+  - com.philj56.gbcc/com.philj56.gbcc.MainActivity
+
+google_voice_access:
+  - com.google.android.apps.accessibility.voiceaccess/com.google.android.apps.accessibility.voiceaccess.activities.LaunchActivity
+
+gumroad:
+  - com.gumroad.app/com.gumroad.app.ui.screens.onboarding.OnboardingActivity
+
+hermes_paket:
+  - de.myhermes.app/de.myhermes.app.MainActivity
+
+iliad:
+  - it.iliad/it.iliad.presentation.MainActivity
+
+market_monk:
+  - com.codesail.market_monk/com.codesail.market_monk.MainActivity
+
+mealient:
+  - gq.kirmanak.mealient/gq.kirmanak.mealient.ui.activity.MainActivity
+
+mercusys:
+  - com.mercusys.halo/com.tplink.mercusys.component.account.welcome.view.WelcomeActivity
+
+moto_widget:
+  - com.motorola.timeweatherwidget/com.motorola.commandcenter.MainActivity
+
+pikatorrent:
+  - com.pikatorrent.PikaTorrent/com.pikatorrent.PikaTorrent.MainActivity
+
+pixverse:
+  - com.pixverseai.pixverse/com.pixverseai.pixverse.MainActivity
+
+quicktiles:
+  - com.asdoi.quicktiles/com.asdoi.quicksettings.SettingsActivity
+
+raccoon_for_friendica:
+  - com.livefast.eattrash.raccoonforfriendica/com.livefast.eattrash.raccoonforfriendica.MainActivity
+
+zalando_prive:
+  - de.zalando.prive/de.zalando.lounge.ui.splash.SplashActivity
+
+musicbrainz:
+  - org.metabrainz.android/org.metabrainz.android.ui.screens.dashboard.DashboardActivity
+
+mt_manager:
+  - bin.mt.plus/bin.mt.plus.MainDarkIcon
+
+slither_io:
+  - air.com.hypah.io.slither/air.com.hypah.io.slither.AIRAppEntry
+
+gta_iii:
+  - com.rockstar.gta3/com.fiveplay.mod.RMS.Recovery
+
+calculator:
+  - com.darkempire78.opencalculator/com.darkempire78.opencalculator.activities.MainActivity
+
+telegram:
+  - org.telegram.messenger.beta/org.telegram.messenger.DefaultIcon
+
+wifi_widget:
+  - com.w2sv.wifiwidget/com.w2sv.wifiwidget.MainActivity
+
+molly:
+  - im.molly.app/org.thoughtcrime.securesms.RoutingActivityAltChat
+
+right_messages:
+  - com.goodwy.smsmessenger/com.goodwy.smsmessenger.activities.SplashActivity.Original
+
+microsoft_365:
+  - com.microsoft.office.officehub/com.microsoft.office.officesuite.OfficeSuiteActivity
+
+samsung_good_lock:
+  - com.samsung.android.goodlock/com.samsung.android.goodlock.MainActivity
+
+right_dialer:
+  - com.goodwy.dialer/com.goodwy.dialer.activities.SplashActivity.Original
+
+venmo:
+  - com.venmo/com.venmo.android.platform.AppExperienceLauncherActivity
+
+bbc_iplayer:
+  - bbc.iplayer.android/uk.co.bbc.iplayer.startup.legacy.routing.LegacyRoutingActivity
