Added Notein Icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -1,7 +1,9 @@
 #
-# new_icon_1:
-#   - com.example/com.example.MainActivity
-#
+notein:
+  category: 'New'
+  compinfos:
+    - com.orion.notein.global/com.orion.notein.MainActivity
+  #
 # new_icon_2:
 #   - com.example.1/com.example.MainActivity
 #   - com.example.2/com.example.MainActivity
