--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -1,8 +1,7 @@
 #
-notein:
-  compinfos:
-    - com.orion.notein.global/com.orion.notein.MainActivity
-  #
+# new_icon_1:
+#   - com.example/com.example.MainActivity
+#
 # new_icon_2:
 #   - com.example.1/com.example.MainActivity
 #   - com.example.2/com.example.MainActivity
@@ -13,3 +12,6 @@ notein:
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+notein:
+  - com.orion.notein.global/com.orion.notein.MainActivity
