VLC Nightly/Debug Icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,6 @@
 
 notein:
   - com.orion.notein.global/com.orion.notein.MainActivity
+
+vlcnightly:
+  - org.videolan.vlc.debug/org.videolan.vlc.StartActivity
