Small icon updates

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -16,5 +16,5 @@
 notein:
   - com.orion.notein.global/com.orion.notein.MainActivity
 
-vlcnightly:
+vlc_nightly:
   - org.videolan.vlc.debug/org.videolan.vlc.StartActivity
