Good Lock App filter update + Notein Icon + VLC Debug/Nightly Icon (#1108)
* Good Lock appfilter update

* Good Lock appfilter update

* Add files via upload

* Added Notein Icons

* Update appfilter.xml

* Update appfilter.xml

* Notein Icons

* Notein Icons

* Update icons.yml

* Icon Update for Notein

* Update icons.yml

* Updated Icon for Notein

* VLC Nightly/Debug Icons

* Small icon updates

---------

Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+notein:
+  - com.orion.notein.global/com.orion.notein.MainActivity
+
+vlc_nightly:
+  - org.videolan.vlc.debug/org.videolan.vlc.StartActivity
