add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,9 @@ notein:
 
 vlc_nightly:
   - org.videolan.vlc.debug/org.videolan.vlc.StartActivity
+
+goguma:
+  - fr.emersion.goguma.play/fr.emersion.goguma.MainActivity
+
+opencalc:
+  - com.darkempire78.opencalculator/com.darkempire78.opencalculator.activities.MainActivity
