--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,21 @@ goguma:
 
 opencalc:
   - com.darkempire78.opencalculator/com.darkempire78.opencalculator.activities.MainActivity
+
+dhaaga_lite:
+  - io.suvam.dhaaga.lite/io.suvam.dhaaga.lite.MainActivity
+
+perceived_stress_scale:
+  - biz.binarysolutions.stress/biz.binarysolutions.stress.LaunchActivity
+
+polaris:
+  - agersant.polaris/com.ryanheise.audioservice.AudioServiceActivity
+
+sefirah:
+  - com.castle.sefirah/com.castle.sefirah.MainActivity
+
+shockalarm:
+  - de.computerelite.shockalarm/de.computerelite.shockalarm.MainActivity
+
+traced_it:
+  - app.traced_it/app.traced_it.ui.MainActivity
