--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,6 @@ shockalarm:
 
 traced_it:
   - app.traced_it/app.traced_it.ui.MainActivity
+
+breezy_weather:
+  - org.breezyweather/org.breezyweather.ui.main.MainActivity
