--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,6 +24,7 @@ goguma:
 
 opencalc:
   - com.darkempire78.opencalculator/com.darkempire78.opencalculator.activities.MainActivity
+  - com.darkempire78.opencalculator/com.darkempire78.opencalculator.MainActivity
 
 dhaaga_lite:
   - io.suvam.dhaaga.lite/io.suvam.dhaaga.lite.MainActivity
