--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -18,3 +18,31 @@ notein:
 
 vlc_nightly:
   - org.videolan.vlc.debug/org.videolan.vlc.StartActivity
+
+goguma:
+  - fr.emersion.goguma.play/fr.emersion.goguma.MainActivity
+
+opencalc:
+  - com.darkempire78.opencalculator/com.darkempire78.opencalculator.activities.MainActivity
+  - com.darkempire78.opencalculator/com.darkempire78.opencalculator.MainActivity
+
+dhaaga_lite:
+  - io.suvam.dhaaga.lite/io.suvam.dhaaga.lite.MainActivity
+
+perceived_stress_scale:
+  - biz.binarysolutions.stress/biz.binarysolutions.stress.LaunchActivity
+
+polaris:
+  - agersant.polaris/com.ryanheise.audioservice.AudioServiceActivity
+
+sefirah:
+  - com.castle.sefirah/com.castle.sefirah.MainActivity
+
+shockalarm:
+  - de.computerelite.shockalarm/de.computerelite.shockalarm.MainActivity
+
+traced_it:
+  - app.traced_it/app.traced_it.ui.MainActivity
+
+breezy_weather:
+  - org.breezyweather/org.breezyweather.ui.main.MainActivity
