--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -46,3 +46,21 @@ traced_it:
 
 breezy_weather:
   - org.breezyweather/org.breezyweather.ui.main.MainActivity
+
+dicio:
+  - com.setegraus.dicio/com.setegraus.dicio.MainActivity
+
+guava:
+  - com.guavahealth.app/com.guavahealth.app.MainActivity
+
+motogp_racing:
+  - com.weplay.motogp/com.unity3d.player.UnityPlayerActivity
+
+mymoney:
+  - com.icedtealabs.mymoney/com.icedtealabs.mymoney.MainActivity
+
+octopus_authenticator:
+  - com.doubleoctopus.authenticator/com.doubleoctopus.authenticator.app.main.MainActivity
+
+phone_pe_business:
+  - com.phonepe.app.business/com.phonepe.app.business.MainActivity
