--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -64,3 +64,36 @@ octopus_authenticator:
 
 phone_pe_business:
   - com.phonepe.app.business/com.phonepe.app.business.MainActivity
+
+epic_games:
+  - com.epicgames.portal/com.epicgames.portal.ui.MainActivity
+
+la_banque_postale:
+  - com.fullsix.android.labanquepostale.accountaccess/com.fullsix.android.labanquepostale.accountaccess.MainActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.SeasonalLauncher2
+
+authenticator_pro:
+  - com.stratumauth.app/com.stratumauth.app.MainActivity
+
+ollama:
+  - com.freakurl.apps.ollama/com.freakurl.apps.ollama.MainActivity
+
+nekogram:
+  - tw.nekomimi.nekogram/org.telegram.messenger.SpaceIcon
+
+arc_search:
+  - company.thebrowser.arc/company.thebrowser.arc.composable.ArcActivity.IconTwo
+
+klarna:
+  - com.myklarnamobile/com.klarna.LaunchActivity
+
+honor_of_kings:
+  - com.levelinfinite.sgameGlobal.midaspay/com.levelinfinite.sgameGlobal.SGameGlobalActivity
+
+grit:
+  - com.shub39.grit/com.shub39.grit.app.MainActivity
+
+tunedetective:
+  - com.dev.tunedetectivex/com.dev.tunedetectivex.MainActivity
