add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -97,3 +97,15 @@ grit:
 
 tunedetective:
   - com.dev.tunedetectivex/com.dev.tunedetectivex.MainActivity
+
+chessify:
+  - com.fimetech.chessfimee/com.fimetech.chessfimee.LaunchActivity
+
+currency_exchange_rates:
+  - tiny.exchangerate/tiny.exchangerate.ui.calculator.CalculatorActivity
+
+dunk_city_dynasty:
+  - com.netease.dunkcd/com.netease.l33androidplugin.MainActivity
+
+pnb_digital:
+  - com.pnb.android/com.pnb.android.ui.splash.SplashActivity
