--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -109,3 +109,9 @@ dunk_city_dynasty:
 
 pnb_digital:
   - com.pnb.android/com.pnb.android.ui.splash.SplashActivity
+
+alchemiconpack:
+  - com.kaanelloed.iconerationiconpack/com.kaanelloed.iconerationiconpack.MainActivity
+
+private_dns_quick_setting:
+  - com.flashsphere.privatednsqs/com.flashsphere.privatednsqs.activity.MainActivity
