Add icons&compinfo (#1111)
* add icons

* add componentinfo

* add icons, premium request

* add icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -46,3 +46,72 @@ traced_it:
 
 breezy_weather:
   - org.breezyweather/org.breezyweather.ui.main.MainActivity
+
+dicio:
+  - com.setegraus.dicio/com.setegraus.dicio.MainActivity
+
+guava:
+  - com.guavahealth.app/com.guavahealth.app.MainActivity
+
+motogp_racing:
+  - com.weplay.motogp/com.unity3d.player.UnityPlayerActivity
+
+mymoney:
+  - com.icedtealabs.mymoney/com.icedtealabs.mymoney.MainActivity
+
+octopus_authenticator:
+  - com.doubleoctopus.authenticator/com.doubleoctopus.authenticator.app.main.MainActivity
+
+phone_pe_business:
+  - com.phonepe.app.business/com.phonepe.app.business.MainActivity
+
+epic_games:
+  - com.epicgames.portal/com.epicgames.portal.ui.MainActivity
+
+la_banque_postale:
+  - com.fullsix.android.labanquepostale.accountaccess/com.fullsix.android.labanquepostale.accountaccess.MainActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.SeasonalLauncher2
+
+authenticator_pro:
+  - com.stratumauth.app/com.stratumauth.app.MainActivity
+
+ollama:
+  - com.freakurl.apps.ollama/com.freakurl.apps.ollama.MainActivity
+
+nekogram:
+  - tw.nekomimi.nekogram/org.telegram.messenger.SpaceIcon
+
+arc_search:
+  - company.thebrowser.arc/company.thebrowser.arc.composable.ArcActivity.IconTwo
+
+klarna:
+  - com.myklarnamobile/com.klarna.LaunchActivity
+
+honor_of_kings:
+  - com.levelinfinite.sgameGlobal.midaspay/com.levelinfinite.sgameGlobal.SGameGlobalActivity
+
+grit:
+  - com.shub39.grit/com.shub39.grit.app.MainActivity
+
+tunedetective:
+  - com.dev.tunedetectivex/com.dev.tunedetectivex.MainActivity
+
+chessify:
+  - com.fimetech.chessfimee/com.fimetech.chessfimee.LaunchActivity
+
+currency_exchange_rates:
+  - tiny.exchangerate/tiny.exchangerate.ui.calculator.CalculatorActivity
+
+dunk_city_dynasty:
+  - com.netease.dunkcd/com.netease.l33androidplugin.MainActivity
+
+pnb_digital:
+  - com.pnb.android/com.pnb.android.ui.splash.SplashActivity
+
+alchemiconpack:
+  - com.kaanelloed.iconerationiconpack/com.kaanelloed.iconerationiconpack.MainActivity
+
+private_dns_quick_setting:
+  - com.flashsphere.privatednsqs/com.flashsphere.privatednsqs.activity.MainActivity
