add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+bubble_for_starship:
+  - com.dearu.bubble.starship/com.dearu.bubble.starship.MainActivityForSTARSHIP
+
+bubble_with_stars:
+  - com.dearu.bubble.stars/com.dearu.bubble.stars.MainActivityForStars
+
+fleek:
+  - com.primero.fleekfrontend/com.primero.fleekfrontend.MainActivity
+
+kurly:
+  - com.dbs.kurly.m2/com.dbs.kurly.m2.a_new_presentation.start.AppStarterActivity
+
+mabopractice:
+  - com.mabopractice.app/com.mabopractice.app.common.MainActivity
+
+oliveyoung:
+  - com.oliveyoung/com.oliveyoung.presentation.home.LauncherActivity
+
+wooribank:
+  - com.wooribank.smart.npib/com.wooribank.smart.npib.main.ui.EntryActivity
