--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,15 @@ oliveyoung:
 
 wooribank:
   - com.wooribank.smart.npib/com.wooribank.smart.npib.main.ui.EntryActivity
+
+elsa_speak:
+  - us.nobarriers.elsa/us.nobarriers.elsa.screens.launcher.AppIconLauncherActivity
+
+runday:
+  - com.hanbit.rundayfree/com.hanbit.rundayfree.ui.intro.a
+
+plexus:
+  - tech.techlore.plexus/tech.techlore.plexus.activities.FirstActivity
+
+music:
+  - org.lineageos.twelve/org.lineageos.twelve.MainActivity
