--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,6 @@ plexus:
 
 music:
   - org.lineageos.twelve/org.lineageos.twelve.MainActivity
+
+naver_chzzk:
+  - com.navercorp.game.android.community/com.navercorp.game.android.community.ui.home.HomeActivity
