--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,33 @@ music:
 
 naver_chzzk:
   - com.navercorp.game.android.community/com.navercorp.game.android.community.ui.home.HomeActivity
+
+divider:
+  - com.wentam.divider/com.wentam.divider.main
+
+encryptionapp:
+  - com.encrypt.bwt/com.encrypt.bwt.MainActivity
+
+hubspot:
+  - com.hubspot.android/com.hubspot.android.app.splash.SplashActivity
+
+playerpro_kk_skin:
+  - com.tbig.playerpro.skins.kk/ua.ikorolkov.playerpro.activities.MainActivity
+
+portal_pasazera:
+  - pl.plksa.portalpasazera/crc64cc116f7452d542b7.SplashActivity
+
+prezzi_benzina:
+  - org.vernazza.androidfuel/it.prezzibenzina.pb3.activities.MainActivity
+
+rollo_rush:
+  - com.SilvertealGames.RolloRush/com.unity3d.player.UnityPlayerActivity
+
+route:
+  - com.route.app/com.route.app.ui.MainActivity
+
+total_commander_onedrive_plugin:
+  - com.ghisler.tcplugins.WindowsLive/com.android.tcplugins.FileSystem.AboutActivity
+
+tracktrace_thailand_post:
+  - com.abs.trackandtrace/com.abs.trackandtrace.controller.LoadingActivity
