add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -78,3 +78,12 @@ total_commander_onedrive_plugin:
 
 tracktrace_thailand_post:
   - com.abs.trackandtrace/com.abs.trackandtrace.controller.LoadingActivity
+
+golden_nugget_casino:
+  - com.goldennugget.casino/com.draftkings.casino.BootstrapActivity
+
+sugarhouse_casino:
+  - com.rush.ri/com.sugarhouse.casino.MainActivity
+
+fan_duel:
+  - com.fanduel.casino/com.casino.template.presentation.LandingActivity
