--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -87,3 +87,15 @@ sugarhouse_casino:
 
 fan_duel:
   - com.fanduel.casino/com.casino.template.presentation.LandingActivity
+
+bice:
+  - cl.bice.apppersonas/cl.bice.apppersonas.MainActivity
+
+congstar:
+  - de.congstar.meincongstar/de.congstar.meincongstar.ui.login.LoginActivity
+
+inook:
+  - com.jeluchu.inook/com.jeluchu.inook.DefaultIcon
+
+tiktok_notes:
+  - com.ss.android.ugc.spark/com.ss.android.ugc.aweme.splash.SplashActivity
