--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -99,3 +99,6 @@ inook:
 
 tiktok_notes:
   - com.ss.android.ugc.spark/com.ss.android.ugc.aweme.splash.SplashActivity
+
+opera:
+  - com.opera.browser/com.opera.Launcher5
