Add icons&compinfo (#1114)
* add icons, premium request

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -78,3 +78,27 @@ total_commander_onedrive_plugin:
 
 tracktrace_thailand_post:
   - com.abs.trackandtrace/com.abs.trackandtrace.controller.LoadingActivity
+
+golden_nugget_casino:
+  - com.goldennugget.casino/com.draftkings.casino.BootstrapActivity
+
+sugarhouse_casino:
+  - com.rush.ri/com.sugarhouse.casino.MainActivity
+
+fan_duel:
+  - com.fanduel.casino/com.casino.template.presentation.LandingActivity
+
+bice:
+  - cl.bice.apppersonas/cl.bice.apppersonas.MainActivity
+
+congstar:
+  - de.congstar.meincongstar/de.congstar.meincongstar.ui.login.LoginActivity
+
+inook:
+  - com.jeluchu.inook/com.jeluchu.inook.DefaultIcon
+
+tiktok_notes:
+  - com.ss.android.ugc.spark/com.ss.android.ugc.aweme.splash.SplashActivity
+
+opera:
+  - com.opera.browser/com.opera.Launcher5
