add missing compinfos gathered from emails

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -102,3 +102,9 @@ tiktok_notes:
 
 opera:
   - com.opera.browser/com.opera.Launcher5
+
+hotstar:
+  - in.startv.hotstaronly/com.hotstar.MainActivity
+
+famila_nordost:
+  - com.famila.nordost/de.paysmard.app.MainActivity
