new icon: Fairwinds

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -108,3 +108,6 @@ hotstar:
 
 famila_nordost:
   - com.famila.nordost/de.paysmard.app.MainActivity
+
+fairwinds:
+  - com.ifs.banking.fiid1425/com.banking.bankinglibrary.activities.SplashActivity
