--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -111,3 +111,6 @@ famila_nordost:
 
 fairwinds:
   - com.ifs.banking.fiid1425/com.banking.bankinglibrary.activities.SplashActivity
+
+camera_alt_2:
+  - com.blackmagicdesign.android.blackmagiccam/com.blackmagicdesign.android.blackmagiccam.ui.MainActivity
