new icon: BenchApp

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -114,3 +114,6 @@ fairwinds:
 
 camera_alt_2:
   - com.blackmagicdesign.android.blackmagiccam/com.blackmagicdesign.android.blackmagiccam.ui.MainActivity
+
+benchapp:
+  - com.benchapp/com.benchapp.MainActivity
