new icon: SENA Motorcycles

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -117,3 +117,6 @@ camera_alt_2:
 
 benchapp:
   - com.benchapp/com.benchapp.MainActivity
+
+sena_motorcycles:
+  - com.sena.senaneomotorcycles/com.sena.senaneomotorcycles.SenaNeoCyclingActivity
