new compinfo: ROMEO

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -120,3 +120,6 @@ benchapp:
 
 sena_motorcycles:
   - com.sena.senaneomotorcycles/com.sena.senaneomotorcycles.SenaNeoCyclingActivity
+
+romeo:
+  - com.planetromeo.android.app/com.planetromeo.android.app.splash.ui.SplashActivity
