new compinfo: Raccoon for Lemmy

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -123,3 +123,6 @@ sena_motorcycles:
 
 romeo:
   - com.planetromeo.android.app/com.planetromeo.android.app.splash.ui.SplashActivity
+
+raccoon_for_lemmy:
+  - com.livefast.eattrash.raccoonforlemmy.android/com.livefast.eattrash.raccoonforlemmy.android.MainActivity
