new compinfo: Yandex.Weather

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -126,3 +126,6 @@ romeo:
 
 raccoon_for_lemmy:
   - com.livefast.eattrash.raccoonforlemmy.android/com.livefast.eattrash.raccoonforlemmy.android.MainActivity
+
+yandex_weather:
+  - ru.yandex.weatherplugin/ru.yandex.weatherplugin.ui.common.activity.SplashActivity
