new icon: TenChat

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -129,3 +129,6 @@ raccoon_for_lemmy:
 
 yandex_weather:
   - ru.yandex.weatherplugin/ru.yandex.weatherplugin.ui.common.activity.SplashActivity
+
+tenchat:
+  - ru.gostinder/ru.gostinder.screens.authorization.phone.AuthActivity
