new icon: Chelindbank (ЧЕЛИНДБАНК)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -132,3 +132,6 @@ yandex_weather:
 
 tenchat:
   - ru.gostinder/ru.gostinder.screens.authorization.phone.AuthActivity
+
+chelindbank:
+  - ru.ftc.faktura.chelindbank/ru.ftc.faktura.multibank.ui.activity.MainActivity
