icon update: TELE2 RU (T2)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -135,3 +135,6 @@ tenchat:
 
 chelindbank:
   - ru.ftc.faktura.chelindbank/ru.ftc.faktura.multibank.ui.activity.MainActivity
+
+tele2_ru:
+  - ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.splashnew.SplashActivity
