--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -102,3 +102,39 @@ tiktok_notes:
 
 opera:
   - com.opera.browser/com.opera.Launcher5
+
+hotstar:
+  - in.startv.hotstaronly/com.hotstar.MainActivity
+
+famila_nordost:
+  - com.famila.nordost/de.paysmard.app.MainActivity
+
+fairwinds:
+  - com.ifs.banking.fiid1425/com.banking.bankinglibrary.activities.SplashActivity
+
+camera_alt_2:
+  - com.blackmagicdesign.android.blackmagiccam/com.blackmagicdesign.android.blackmagiccam.ui.MainActivity
+
+benchapp:
+  - com.benchapp/com.benchapp.MainActivity
+
+sena_motorcycles:
+  - com.sena.senaneomotorcycles/com.sena.senaneomotorcycles.SenaNeoCyclingActivity
+
+romeo:
+  - com.planetromeo.android.app/com.planetromeo.android.app.splash.ui.SplashActivity
+
+raccoon_for_lemmy:
+  - com.livefast.eattrash.raccoonforlemmy.android/com.livefast.eattrash.raccoonforlemmy.android.MainActivity
+
+yandex_weather:
+  - ru.yandex.weatherplugin/ru.yandex.weatherplugin.ui.common.activity.SplashActivity
+
+tenchat:
+  - ru.gostinder/ru.gostinder.screens.authorization.phone.AuthActivity
+
+chelindbank:
+  - ru.ftc.faktura.chelindbank/ru.ftc.faktura.multibank.ui.activity.MainActivity
+
+tele2_ru:
+  - ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.splashnew.SplashActivity
