--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -168,3 +168,21 @@ scrcpy_for_android:
 
 stacked:
   - app.stacked.routines.habits.stacking.productivity.goals/app.stacked.routines.habits.stacking.productivity.goals.MainActivity
+
+sonic_drive_in:
+  - com.sonic.sonicdrivein/com.inspirebrandsapp.LaunchActivity
+
+peacock:
+  - com.peacocktv.peacockandroid/com.peacocktv.legacy.monolith.main.MainActivity
+
+dhaaga_lite:
+  - io.suvam.dhaaga/io.suvam.dhaaga.MainActivity
+
+castro:
+  - com.itemstudio.castro/com.itemstudio.castro.navigation.NavigationActivity
+
+amazon_aws_console:
+  - com.amazon.aws.console.mobile/com.amazon.aws.console.mobile.ui.MainActivity
+
+auchan:
+  - com.auchan.android/com.auchan.LaunchActivity
