--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -138,3 +138,51 @@ chelindbank:
 
 tele2_ru:
   - ru.tele2.mytele2/ru.tele2.mytele2.ui.splash.splashnew.SplashActivity
+
+apple_tv:
+  - com.apple.atve.androidtv.appletv/com.apple.android.tv.MainActivity
+
+circle_to_search:
+  - com.circletosearch.android/com.circletosearch.android.activity.SetupActivity
+
+jkb_mpay_delight:
+  - com.lcode.jkbmpay/com.lcode.jkbmpay.OnBoarding
+
+mensa:
+  - de.imensa.app.android/de.mensas.app.Mensas
+
+noting_notes:
+  - com.hearthborn.studios.notingnotes/com.hearthborn.studios.notingnotes.AuthorizationActivity
+
+one_score:
+  - tech.fplabs.score/tech.fplabs.score.MainActivity
+
+porter:
+  - com.theporter.android.customerapp/com.theporter.android.customerapp.RootActivity
+
+reterminal:
+  - com.rk.terminal/com.rk.terminal.ui.activities.terminal.Terminal
+
+scrcpy_for_android:
+  - org.client.scrcpy/org.client.scrcpy.MainActivity
+
+stacked:
+  - app.stacked.routines.habits.stacking.productivity.goals/app.stacked.routines.habits.stacking.productivity.goals.MainActivity
+
+sonic_drive_in:
+  - com.sonic.sonicdrivein/com.inspirebrandsapp.LaunchActivity
+
+peacock:
+  - com.peacocktv.peacockandroid/com.peacocktv.legacy.monolith.main.MainActivity
+
+dhaaga_lite:
+  - io.suvam.dhaaga/io.suvam.dhaaga.MainActivity
+
+castro:
+  - com.itemstudio.castro/com.itemstudio.castro.navigation.NavigationActivity
+
+amazon_aws_console:
+  - com.amazon.aws.console.mobile/com.amazon.aws.console.mobile.ui.MainActivity
+
+auchan:
+  - com.auchan.android/com.auchan.LaunchActivity
