--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ mini:
 
 tropical_smoothie_cafe:
   - com.tropicalsmoothie.tropicalsmoothiecafe.android.app/com.tropicalsmoothie.tropicalsmoothiecafe.android.app.MainActivity
+
+nottiled:
+  - com.mirwanda.nottiled/com.mirwanda.nottiled.MainActivity
