--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,9 @@ tropical_smoothie_cafe:
 
 nottiled:
   - com.mirwanda.nottiled/com.mirwanda.nottiled.MainActivity
+
+kia_connect:
+  - com.kiacanada.uvo/io.jetbridge.kia_connect.MainActivity
+
+samsung_shop:
+  - com.samsung.ecomm/com.samsung.ecomm.MainActivity
