--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,6 @@ kia_connect:
 
 samsung_shop:
   - com.samsung.ecomm/com.samsung.ecomm.MainActivity
+
+redomi:
+  - com.acszo.redomi.repo/com.acszo.redomi.MainActivity
