trigger request list updater after beta release too

--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -269,5 +269,5 @@ jobs:
         token: ${{ env.token }}
       if: |
         github.repository_owner == env.organization &&
-        inputs.release_type == 'prod' &&
+        # inputs.release_type == 'prod' &&
         inputs.publish == true
