icon link: ByeDPI -> ByeByeDPI

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,6 @@ kia_connect:
 
 samsung_shop:
   - com.samsung.ecomm/com.samsung.ecomm.MainActivity
+
+byedpi:
+  - io.github.romanvht.byedpi/io.github.dovecoteescapee.byedpi.activities.MainActivity
