new icon: Amnezia WG (+ alt)

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,8 @@ samsung_shop:
 
 byedpi:
   - io.github.romanvht.byedpi/io.github.dovecoteescapee.byedpi.activities.MainActivity
+
+amnezia_wg:
+  - org.amnezia.awg/org.amnezia.awg.activity.MainActivity
+
+amnezia_wg_alt_1: {}
