--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -42,3 +42,11 @@ kia_connect:
 
 samsung_shop:
   - com.samsung.ecomm/com.samsung.ecomm.MainActivity
+
+byedpi:
+  - io.github.romanvht.byedpi/io.github.dovecoteescapee.byedpi.activities.MainActivity
+
+amnezia_wg:
+  - org.amnezia.awg/org.amnezia.awg.activity.MainActivity
+
+amnezia_wg_alt_1: {}
