New icons + fix comp info
Added new icons and refreshed componets info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -50,3 +50,19 @@ amnezia_wg:
   - org.amnezia.awg/org.amnezia.awg.activity.MainActivity
 
 amnezia_wg_alt_1: {}
+
+better_schedule:
+  - cz.vitskalicky.lepsirozvrh/cz.vitskalicky.lepsirozvrh.mainActivity
+
+mapycz:
+  - cz.seznam.mapy/cz.seznam.mapy.FreemiumActivity
+  - cz.seznam.mapy/cz.seznam.mapy.PremiumActivity
+
+csob_klic:
+  - cz.csob.smartklic/com.aheaditec.smartkey.flows.presentation.view.LauncherActivity
+
+csob_smart:
+  - cz.csob.smart/cz.csob.smartbanking.app.MainActivity
+
+csob_ceb:
+  - cz.csob.ceb/.legacy.activity.StartActivity 
