--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -66,3 +66,54 @@ csob_smart:
 
 csob_ceb:
   - cz.csob.ceb/.legacy.activity.StartActivity 
+
+adresilo:
+  - com.adresilo.android/com.adresilo.android.MainActivity
+
+app_search:
+  - net.pnhdroid.appsearch/net.pnhdroid.appsearch.search.SearchActivity
+
+assignr:
+  - com.assignr.mobile.reactjs.native/com.assignr.SplashActivity
+
+breakout_71:
+  - me.lecaro.breakout/me.lecaro.breakout.MainActivity
+
+ctpi:
+  - it.ctpi.AppCtpi/it.ctpi.AppCtpi.SplashScreenActivity
+
+gluten_dude:
+  - com.glutendudeapp/com.glutendudeapp.ui.splash.SplashActivity
+
+gva_nieuws:
+  - be.concentra.gva.MediaApp/be.mediahuis.one.ui.MainActivity
+
+harvard_business_review:
+  - com.maz.combo1126/com.maz.combo1126.MainActivity
+
+jdownloader_remote_control:
+  - com.simonsturge.myjdownloader/com.simonsturge.myjdownloader.MainActivity
+
+mfine:
+  - com.mfine/com.mfine.MainActivity
+
+mysss:
+  - com.sss.gov.mysssmobileapp/com.sssgov.mysssmobileapp.views.activity.SplashScreenActivity
+
+noteshub:
+  - app.noteshub.www/app.noteshub.www.MainActivity
+
+notvpn:
+  - com.notvpn/com.notvpn.SplashActivity
+
+qoqa:
+  - ch.alpsoft.qoqa.ui/com.qoqa.qoqa.views.activities.MainActivity
+
+tip_calculator:
+  - com.chimbori.milliways/com.chimbori.milliways.MilliwaysActivity
+
+u_next:
+  - jp.unext.mediaplayer/jp.unext.mediaplayer.main.MainActivity
+
+whatsapp_cleaner:
+  - com.vishnu.whatsappcleaner/com.vishnu.whatsappcleaner.MainActivity
