--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -117,3 +117,9 @@ u_next:
 
 whatsapp_cleaner:
   - com.vishnu.whatsappcleaner/com.vishnu.whatsappcleaner.MainActivity
+
+my_oldboy:
+  - com.fastemulator.gbc/com.fastemulator.gbc.RomListActivity
+
+iconfiy:
+  - com.drdisagree.iconify.foss/com.drdisagree.iconify.SplashActivity
