Updated comp info

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,9 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+better_schedule:
+ - cz.vitskalicky.lepsirozvrh/cz.vitskalicky.lepsirozvrh.mainActivity.MainActivity
+
+revolt:
+ - chat.revolt/chat.revolt.activities.MainActivity
