add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,12 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+jack_in_the_box_order_food:
+  - com.jackintheboxinc.JackMobileApp/com.wearehathway.jackinthebox.development.MainActivity
+
+mysynchrony:
+  - com.syf.mysynchrony/com.syf.mysynchrony.login.welcome.WelcomeActivity
+
+smiths:
+  - com.smithsfoodanddrug.mobile/com.kroger.mobile.BannerSelectionActivity
