--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -21,3 +21,30 @@ mysynchrony:
 
 smiths:
   - com.smithsfoodanddrug.mobile/com.kroger.mobile.BannerSelectionActivity
+
+aone:
+  - com.aoneschool/com.aoneschool.MainActivity
+
+my_mqtt:
+  - at.tripwire.mqtt.client/at.tripwire.mqtt.client.ui.MainActivity
+
+nothing_icon_pack_pro:
+  - com.nothing.icon.pro/com.nothing.icon.pro.MainActivity
+
+notino:
+  - com.pragonauts.notino/com.pragonauts.notino.feature.splash.presentation.LauncherActivity
+
+playlist_video_game_manager:
+  - com.ign.playlist/com.ign.playlist.MainActivity
+
+pro_expense:
+  - com.arduia.expense/com.arduia.expense.ui.MainActivity
+
+rocket_learn_languages:
+  - com.rocketlanguages.app/com.rocketlanguages.app.MainActivity
+
+termux_gui:
+  - com.termux.gui/com.termux.gui.GUIConfigActivity
+
+roblox:
+  - com.roblox.client/com.lib.so.MainActivity
