--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,27 @@ termux_gui:
 
 roblox:
   - com.roblox.client/com.lib.so.MainActivity
+
+george_bank:
+  - sk.slsp.georgego/at.beeone.george.splashscreen.SplashScreenVariantDefault
+
+sony_photography_pro:
+  - jp.co.sony.mc.cameraapp2/jp.co.sony.mc.camera.CameraActivity
+
+burger_king:
+  - it.burgerking.android/it.burgerking.android.MainActivity
+
+line:
+  - jp.naver.line.android/jp.naver.line.android.design_aqua_green
+
+linked__in:
+  - com.linkedin.android/com.linkedin.android.authenticator.WinterFestivalActivityAlias
+
+mi_movistar:
+  - com.services.movistar.ar/com.services.movistar.ar.MainActivity
+
+youtube_music_revanced:
+  - app.revanced.android.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity
+
+aosp_mods:
+  - sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityNormalIcon
