Add icons&compinfo (#1124)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,63 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+jack_in_the_box_order_food:
+  - com.jackintheboxinc.JackMobileApp/com.wearehathway.jackinthebox.development.MainActivity
+
+mysynchrony:
+  - com.syf.mysynchrony/com.syf.mysynchrony.login.welcome.WelcomeActivity
+
+smiths:
+  - com.smithsfoodanddrug.mobile/com.kroger.mobile.BannerSelectionActivity
+
+aone:
+  - com.aoneschool/com.aoneschool.MainActivity
+
+my_mqtt:
+  - at.tripwire.mqtt.client/at.tripwire.mqtt.client.ui.MainActivity
+
+nothing_icon_pack_pro:
+  - com.nothing.icon.pro/com.nothing.icon.pro.MainActivity
+
+notino:
+  - com.pragonauts.notino/com.pragonauts.notino.feature.splash.presentation.LauncherActivity
+
+playlist_video_game_manager:
+  - com.ign.playlist/com.ign.playlist.MainActivity
+
+pro_expense:
+  - com.arduia.expense/com.arduia.expense.ui.MainActivity
+
+rocket_learn_languages:
+  - com.rocketlanguages.app/com.rocketlanguages.app.MainActivity
+
+termux_gui:
+  - com.termux.gui/com.termux.gui.GUIConfigActivity
+
+roblox:
+  - com.roblox.client/com.lib.so.MainActivity
+
+george_bank:
+  - sk.slsp.georgego/at.beeone.george.splashscreen.SplashScreenVariantDefault
+
+sony_photography_pro:
+  - jp.co.sony.mc.cameraapp2/jp.co.sony.mc.camera.CameraActivity
+
+burger_king:
+  - it.burgerking.android/it.burgerking.android.MainActivity
+
+line:
+  - jp.naver.line.android/jp.naver.line.android.design_aqua_green
+
+linked__in:
+  - com.linkedin.android/com.linkedin.android.authenticator.WinterFestivalActivityAlias
+
+mi_movistar:
+  - com.services.movistar.ar/com.services.movistar.ar.MainActivity
+
+youtube_music_revanced:
+  - app.revanced.android.youtube.music/com.google.android.apps.youtube.music.activities.MusicActivity
+
+aosp_mods:
+  - sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityNormalIcon
