--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -93,3 +93,6 @@ tsuruha_drug:
 
 _4910:
   - com.ablycorp.aglo/com.ablycorp.aglo.ui.activity.splash.AgloSplashActivity
+
+apatch:
+  - me.garfieldhan.apatch.next/me.bmax.apatch.ui.MainActivity
