Add icons&compinfo (#1125)
* add icons, premium request

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -72,3 +72,27 @@ youtube_music_revanced:
 
 aosp_mods:
   - sh.siava.pixelxpert/sh.siava.pixelxpert.FakeSplashActivityNormalIcon
+
+aladdin_internet_bookstore:
+  - kr.co.aladin.third_shop/kr.co.aladin.activity.AladinShopWebMainActivity
+
+banapresso:
+  - com.banaple.foodproapp.banapresso/com.banaple.foodproapp.banapresso.FoodProAppIntro
+
+hotto_motto:
+  - li.yapp.appADFA6026/li.yapp.sdk.YLSplashActivity
+
+ramen_yamaokaya:
+  - li.yapp.appCC40B910/li.yapp.sdk.YLSplashActivity
+
+sweettracker:
+  - com.sweettracker.smartparcel/com.sweettracker.smartparcel.presentation.SplashActivity
+
+tsuruha_drug:
+  - jp.co.tsuruhahd.tsuruhadrug/com.lv.imanara.module.basic.OpeningActivity
+
+_4910:
+  - com.ablycorp.aglo/com.ablycorp.aglo.ui.activity.splash.AgloSplashActivity
+
+apatch:
+  - me.garfieldhan.apatch.next/me.bmax.apatch.ui.MainActivity
