add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -96,3 +96,33 @@ _4910:
 
 apatch:
   - me.garfieldhan.apatch.next/me.bmax.apatch.ui.MainActivity
+
+aladdin_ebook:
+  - kr.co.aladin.ebook/kr.co.aladin.ebook.SplashActivity
+
+a_twosome_place:
+  - com.cj.twosome/com.cj.twosome.Activity.Common.TsIntroActivity
+
+cosmo_the_gate:
+  - com.modhaus.cosmo/com.modhaus.cosmo.MainActivity
+
+hyundai_card:
+  - com.hyundaicard.appcard/com.hyundaicard.appcard.app.intro.LoadingForNormalActivity
+
+kakao_taxi:
+  - com.kakao.taxi/com.kakao.t.presentation.launcher.LauncherActivity
+
+kb_pay:
+  - com.kbcard.cxh.appcard/com.kbcard.cxh.appcard.screen.intro.LaunchControlActivity
+
+wongi_weather:
+  - wongi.weather/wongi.weather.activity.MainActivity
+
+woowa_brothers_delivery:
+  - com.sampleapp/com.baemin.presentation.ui.RouterActivity
+
+x_saver:
+  - twittervideodownloader.twitter.videoindir.savegif.twdown/com.atlasv.android.downloader.app.x.feature.splash.SplashActivity
+
+wooribank:
+  - com.wooricard.smartapp/com.wooricard.smartapp.InAppUpdateActivity
