--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -126,3 +126,24 @@ x_saver:
 
 wooribank:
   - com.wooricard.smartapp/com.wooricard.smartapp.InAppUpdateActivity
+
+atba:
+  - com.torbox.atba/com.torbox.atba.MainActivity
+
+grok:
+  - ai.x.grok/ai.x.grok.main.GrokActivity
+
+mistral_ai:
+  - ai.mistral.chat/ai.mistral.chat.MainActivity
+
+polito_students:
+  - it.polito.students/it.polito.students.MainActivity
+
+serializd:
+  - com.serializdmobile/com.serializdmobile.MainActivity
+
+superimage_pro:
+  - com.zhenxiang.superimage.pro/com.zhenxiang.superimage.MainActivity
+
+utac:
+  - dev.ech0.torbox.multiplatform/dev.ech0.torbox.multiplatform.MainActivity
