--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -147,3 +147,28 @@ superimage_pro:
 
 utac:
   - dev.ech0.torbox.multiplatform/dev.ech0.torbox.multiplatform.MainActivity
+
+mi_movistar:
+  - com.services.movistar.ar/com.services.movistar.ar.MainActivity
+  - cl.movistar.android/cl.movistar.android.MainActivity
+
+uniqlo:
+  - com.uniqlo.my.catalogue/com.uniqlo.ja.catalogue.view.mobile.startup.StartupActivity
+
+fedilab:
+  - app.fedilab.android/app.fedilab.android.activities.MainActivity.Bubbles
+
+ayugram:
+  - com.radolyn.ayugram/com.exteragram.messenger.Dsgn480Icon
+
+nekogram:
+  - tw.nekomimi.nekogram/org.telegram.messenger.OldSchoolIcon
+
+gta_san_andreas:
+  - com.rockstargames.gtasa/com.rockstargames.gtasa.DownloaderActivity
+
+yokai:
+  - eu.kanade.tachiyomi.nightlyYokai/eu.kanade.tachiyomi.ui.main.MainActivity
+
+calculator:
+  - com.revengeos.calculator/com.android.calculator2.Calculator
